# rsiil

./: Dataset Organization Procedure.ipynb  LICENSE  Paper-Figs.ipynb  README.md  datasetSrc.csv  requirements.txt
detection_methods/patch_match/forgery-detection-visualization/: CMakeLists.txt  README.md  build.sh
detection_methods/patch_match/forgery-detection-visualization/cmake/modules/: FindCBLAS.cmake  FindLAPACKE.cmake
detection_methods/patch_match/forgery-detection-visualization/example/: result.txt
detection_methods/patch_match/forgery-detection-visualization/src/: CMakeLists.txt  main.cpp
detection_methods/patch_match/forgery-detection-visualization/src/Utilities/: LibImages.cpp  LibImages.h  LibMatrix.cpp  LibMatrix.h  Utilities.cpp  Utilities.h  filters.cpp  filters.h  iio.c  iio.h  parameters.h  tools.h
detection_methods/patch_match/forgery-detection-visualization/src/Utilities/FeatManager/: .siftManager.cpp.swp  .siftManager.h.swp  featManager.h  siftManager.cpp  siftManager.h  zMManager.cpp  zMManager.h
detection_methods/patch_match/forgery-detection-visualization/src/Utilities/PatchMatch/: patchmatch.cpp  (+1 more)
detection_methods/vole/cmfd_framework/: CMakeLists.txt  README.txt  README_build.txt  README_cmfd_examples.txt  README_cmfd_options.txt  README_commands.txt  README_ground_truth_examples.txt  README_pixeleval.txt
detection_methods/vole/cmfd_framework/cmake/: VoleFindPackages.cmake
detection_methods/vole/cmfd_framework/cmfd/: CMakeLists.txt  blockhandling.cxx  blockhandling.h  blur.cxx  blur.h  bravo.cxx  bravo.h  buildcluster.cxx  buildcluster.h  circlefeat.cxx  circlefeat.h  cmfd_util.cxx  cmfd_util.h  copymoveframework.cxx  copymoveframework.h  copymoveframework_config.cxx  copymoveframework_config.h  cps.cxx  cps.h  dct.cxx  dct.h  dwtfeat.cxx  dwtfeat.h  execution.cxx  execution.h  fastsats.cxx  fastsats.h  featfactory.cxx  featfactory.h  feature.cxx  feature.h  fmt.cxx  fmt.h  hu.cxx  hu.h  kdtree2.cpp  kpca.cxx  kpca.h  lin.cxx  lin.h  (+23 more)
detection_methods/vole/cmfd_framework/cmfd/post_process/: post_process_command.cxx  post_process_command.h  post_process_config.cxx  post_process_config.h  post_process_core.cxx  post_process_core.h
detection_methods/vole/cmfd_framework/common/: CMakeLists.txt  filesystem_helpers.h  hashes.cpp  hashes.h  progress_observer.h  pyvole_common.cpp  string_conversion.h
detection_methods/vole/cmfd_framework/configs/default_new/: blur.conf  bravo.conf  circle.conf  dct.conf  dwt.conf  fmt.conf  hu.conf  kpca.conf  lin.conf  luo.conf  pca.conf  svd.conf  zernike.conf
detection_methods/vole/cmfd_framework/configs/keypoint/: sift.conf  surf.conf
detection_methods/vole/cmfd_framework/ground_truth_db/: CMakeLists.txt  alpha_channel.cpp  alpha_channel.h  command_ground_truth.cpp  command_ground_truth.h  command_gt_post_processing.cpp  command_gt_post_processing.h  command_reverse_engineer_snippet.cpp  command_reverse_engineer_snippet.h  command_splice.cpp  command_splice.h  command_splice_random_block.cpp  command_splice_random_block.h  forgery.cpp  forgery.h  good_match.h  ground_truth_common.h  ground_truth_config.cpp  ground_truth_config.h  gt_post_processing_config.cpp  gt_post_processing_config.h  reverse_engineer_snippet_config.cpp  reverse_engineer_snippet_config.h  splice_config.cpp  splice_config.h  splice_core.cpp  splice_core.h  splice_random_block_config.cpp  splice_random_block_config.h  subimage.cpp  subimage.h
detection_methods/vole/cmfd_framework/ground_truth_db/scripts/: all_calls_find_snippet_positions.pl  all_calls_splice_image.pl  db_setup.pl  extract_alpha_channels.pl  find_snippet_positions.pl  splice_configs.pl  splice_image.pl
detection_methods/vole/cmfd_framework/pixeleval/: Makefile  pixeleval.cpp
detection_methods/vole/cmfd_framework/shell/: command.h  main.cxx  modules.h.in
(+254 files in other folders)
